    dialog allow arbitrary text in progress bar
    dialog %(command) accepts bash command line
    document Unmount On Exit ignored on X logout kill #204
    address debian packaging warnings #209
    fix segfault on middle-click bookmarks empty #208
    Dialog label --wrap|--nowrap, all --compact --expand
    command line add --version option
    add fm_edit function
0.8.2   2012-10-25:
    fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
    overwrite dialog replace text view with labels
    add From: to task popup
    fix destination contained in source error
    fix cut paste directory replace error #174
    task popup From/To adjustments
0.8.1   2012-10-21:
    added task manager queue/pause #147
    disable task manager find
    set minimum dialog and task pane sizes #56
    added Tasks user manual section
    fix clang compile error #162
    fix hang on dir tree sel access error #164
    fix file search find within symlink dir #122
    add double-click opens file search result #109
    fix vfs move dest symlink device determination
    abort copy/move remove incomplete file
    move Sort submenu from Style to View submenu
    gtk 2.18 compatibility #146
    remove explicit libgdk-pixbuf2.0-0 dependency #146
    added precision timer for more accurate/smooth copy speeds
    btrfs moint point detection workaround #165
    fix segfault on blank Preferences Terminal setting #166
    add rxvt to terminal programs list #166
    desktop drop onto folder #45
    fix new tab path merged if the last dir spec is / #167
    libstartup-notification-0.9 or -1.0 optional #19 #146
    adjustment for build on debian squeeze (gtk 2.20 glib 2.24)
    ctrl-Q as default Exit key
    allow stop of exited task #168
    auto stop on bad exit status #168
    updated Russian translation
    added partial Dutch translation by tct1501
    remove vert scrollbar compact mode
    per task error and overwrite options; auto rename
    added View|Tasks|Queue|Pause On Error