@@ -2517,6 +2517,8 @@ Example:
                Close the current box of widgets
 <a href="#dialog-nonvis-keypress">--keypress</a>     KEYCODE MODIFIER COMMAND...
                Run COMMAND when a key combination is pressed
+<a href="#dialog-nonvis-winclose">--window-close</a> COMMAND...
+               Run COMMAND on window close attempt
 <a href="#dialog-nonvis-command">--command</a>      FILE|PIPE [COMMAND...]
                Read commands from FILE or PIPE.  COMMAND for init.
 
@@ -2552,7 +2554,7 @@ types to change the element's font and font size.  For example:
 <a href="#dialog-int">INTERNAL COMMANDS</a>:
     <a href="#dialog-int-noop">noop</a>       ( any arguments )
                No operation - does nothing but evaluate arguments
-    <a href="#dialog-int-close">close</a>      ( no arguments )
+    <a href="#dialog-int-close">close</a>      [REVERSE]
                Close the dialog
     <a href="#dialog-int-press">press</a>      BUTTON-NAME
                Press button named BUTTON-NAME
@@ -3563,6 +3565,19 @@ In the above example, "0x6b" is the KEYCODE for the 'k' key, and "0x4" is the MO
 <p>In <a href="#dialog-cmd">commands</a>, the value of a --keypress element (eg %v, %keypress1) will equal the keycode and modifier.
 <br><br>
 
+<!-- # --window-close #winclose -->
+Usage: <code><b>--window-close COMMAND...</b></code>
+
+<p>A --window-close element runs COMMAND when the user attempts to close the dialog (usually by clicking the 'X' button in the upper right corner or using Alt-F4, etc.)  The window closure will be inhibited, but COMMAND can be used to close it conditionally.
+
+<p>For example:
+<pre>
+    spacefm -g --label "You can't close this window unless you enter text:" \
+               --input \
+	       --window-close close %input1</pre>
+
+In the above example, the internal <a href="#dialog-int-close">close</a> command is passed the contents of the --input element, which acts as a reversal to the close command.  If %input1 is empty, the close command does nothing, otherwise it closes the window.
+
 <!-- # --command #command -->
 Usage: <code><b>--command FILE|PIPE [COMMAND...]</b></code>
 
@@ -3678,9 +3693,16 @@ Another use for the noop command is to evaluate arguments.  This can be used to 
 In the above example, when the OK button is pressed, first 'myscript' will be run <i>synchronously</i> (an imaginary script which does something critical before closure).  SpaceFM Dialog will wait for it to finish.  Then and only then, the 'close' command will close the dialog.
 
 <!-- #close -->
-Usage: <b>close</b>
+Usage: <b>close [REVERSE]</b>
 
 <p>The close command simply closes the dialog window, as if the user clicked the X in the top-right corner or used Alt+F4.  $dialog_pressed_index will equal -2.
+
+<p>REVERSE, if supplied and equal to "", "0", or "false", causes the close command to do nothing.  This can be used with the value from another element, for example, to make the close command conditional.  For example:
+<pre>
+    spacefm -g --label "You can't close this window unless you enter text:" \
+               --input \
+	       <a href="#dialog-nonvis-winclose">--window-close</a> <b>close %input1</b></pre>
+
 
 <!-- #press -->
 Usage: <b>press BUTTON-NAME</b>
@@ -3811,7 +3833,7 @@ Usage: <b>source FILE</b>
 <pre><b>$ spacefm -s help</b>
 SpaceFM socket commands permit external processes (such as command scripts)
 to read and set GUI property values and execute methods inside running SpaceFM
-windows.  To handle events see View|Auto Run in the main menu bar.
+windows.  To handle events see <a href="#sockets-menu">View|Events</a> in the main menu bar.
 
 Usage:
     spacefm --socket-cmd|-s METHOD [OPTIONS] [ARGUMENT...]
