@@ -26,6 +26,7 @@
     Dialog label --wrap|--nowrap, all --compact --expand
     command line add --version option
     add fm_edit function
+    Dialog add --window-close; add [REVERSE] to close
 0.8.2   2012-10-25:
     fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
     overwrite dialog replace text view with labels
